# home_alarm

./: .gitignore  Dockerfile  aarch64_utils.sh  burglar_fucker_conf.toml  burglar_fucker_conf.toml.aarch64  meson.build  meson_options.txt
deploy/: .gitignore
deploy/etc/nginx/: nginx.conf
src/: common.hpp  configuration_loader.cpp  configuration_loader.hpp  device.hpp  main.cpp  movement_detector.cpp  movement_detector.hpp  movement_handler.cpp  movement_handler.hpp
src/http/: server.cpp  server.hpp
subprojects/: boost.wrap  spdlog.wrap  tomlpp.wrap
subprojects/packagefiles/boost/: meson.build
